fix(css): add flex wrap to header navbar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Michroma&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Michroma&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
 
 *,
 *::before,
@@ -61,6 +61,7 @@ ul {
   display: flex;
   gap: 20px;
   font-family: Michroma;
+  flex-wrap: wrap;
 }
 
 /* BODY SECTIONS */
